--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
 body * {
     display: flex;
     justify-content: center;
@@ -20,10 +24,11 @@ body * {
 
 body {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background-color: #1DB276;
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
 
 #container {
