--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+::selection {
+
+    background: transparent;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -23,12 +28,16 @@ body * {
 }
 
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100vw;
     min-height: 100vh;
     background-color: #1DB276;
     padding: 0;
     margin: 0;
     overflow: hidden;
+
 }
 
 #container {
