fix linkedin btn

--- a/style.css
+++ b/style.css
@@ -313,10 +313,14 @@ body {
     }
 
     #linkedin:hover {
-        width: 80%;
-        height: 80%;
-        padding: 20px 0;
-        margin-top: 0;
+        width: 30px;
+        height: 30px;
+        padding: 20px;
+        margin: 0 0 0 0;
+        box-shadow: 0px 6px 0px #EBEBEB;
+        position: absolute;
+        bottom: 30px;
+        right: 30px;
     }
 
 
